--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@polkadot/util-crypto": "^2.6.2",
     "antd": "^4.1.1",
     "big.js": "^5.2.2",
+    "decimal.js": "^10.2.0",
     "prop-types": "^15.7.2",
     "query-string": "^6.11.0",
     "react": "^16.13.1",
@@ -52,10 +53,10 @@
       "only-warn"
     ],
     "rules": {
-      "indent":"off",
-      "comma-dangle":"off",
+      "indent": "off",
+      "comma-dangle": "off",
       "semi": "off",
-      "space-before-function-paren":"off",
+      "space-before-function-paren": "off",
       "no-extra-semi": 1
     }
   },
