--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "antd": "^4.1.1",
     "big.js": "^5.2.2",
     "decimal.js": "^10.2.0",
+    "i18next": "^19.4.4",
     "prop-types": "^15.7.2",
     "query-string": "^6.11.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-i18next": "^11.4.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "semantic-ui-css": "^2.4.1",
